--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
         <p>A dynamic and results-oriented professional with over 14 years of extensive experience in control and electrical engineering.</p>
     </header>
 
+<div class="container">
+        <div class="profile-photo">
+            <img src="profile.jpg" alt="Ye Hlaing's Photo">
+        </div>
+    
     <div class="container">
         <div class="section">
             <h2>Profile Summary</h2>
