--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
             padding: 20px;
             text-align: center;
         }
+        .profile-photo {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .profile-photo img {
+            border-radius: 50%;
+            width: 150px;
+            height: 150px;
+        }
     </style>
 </head>
 <body>
