--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 <div class="container">
         <div class="profile-photo">
-            <img src="profile.jpg" alt="Ye Hlaing's Photo">
+            <img src="blob/main/profile.jpg" alt="Ye Hlaing's Photo">
         </div>
     
     <div class="container">
