--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <h2>Software Exposure</h2>
             <ul>
                 <li>MATLAB, SIMULINK for simulating PID controllers and Eigen-value Analysis</li>
-                <li>Python Programming</li>
+                <li>Python</li>
                 <li>DigSilent Power Factory and Power World Simulator</li>
                 <li>FactoryTalk View Studio, ControlLogix 5000, RSLogix 500, Studio 5000, RSLinx Classic</li>
                 <li>SIMATIC Manager, SIMATIC WinCC, SPPA-T3000, TIA Portal, SICAM PAS, DIGSI-4</li>
