--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
             padding: 20px;
             text-align: center;
         }
+        .video-section {
+            text-align: center;
+            margin-bottom: 40px;
+        }
     </style>
 </head>
 <body>
@@ -90,6 +94,14 @@
                 <li>Skilled in resource management, budgeting, risk mitigation, and promoting a safety culture.</li>
                 <li>Experienced in procurement processes and project management activities.</li>
             </ul>
+        </div>
+
+         <div class="video-section">
+            <h2>Video Presentation</h2>
+            <video width="600" controls>
+                <source src="inverted-pendulum.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
         </div>
 
         <div class="section">
