--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <label for="videoSelect">Choose a video:</label>
                 <select id="videoSelect" onchange="showVideo()">
                     <option value="">--Select a video--</option>
-                    <option value="inverted-pendulum.mp4">Video 1</option>
+                    <option value="inverted-pendulum.mp4">Inverted Pendulum</option>
                     <option value="video2.mp4">Video 2</option>
                     <option value="video3.mp4">Video 3</option>
                 </select>
