--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <select id="videoSelect" onchange="showVideo()">
                     <option value="">--Select a video--</option>
                     <option value="inverted-pendulum.mp4">Inverted Pendulum</option>
-                    <option value="video2.mp4">Video 2</option>
+                    <option value="my-workstation.mp4">My Workstation</option>
                     <option value="video3.mp4">Video 3</option>
                 </select>
             </div>
