--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             text-align: center;
         }
         .photo-section, .video-section {
-            text-align: center;
+            text-align: left;
             margin-bottom: 40px;
         }
         .dropdown {
