--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
                 <label for="photoSelect">Choose a photo:</label>
                 <select id="photoSelect" onchange="showPhoto()">
                     <option value="">--Select a photo--</option>
-                    <option value="photo1.jpg">Photo 1</option>
-                    <option value="photo2.jpg">Photo 2</option>
-                    <option value="photo3.jpg">Photo 3</option>
+                    <option value="photo1.jpg">Turbine Overhaul</option>
+                    <option value="photo2.jpg">Keppel Lite</option>
+                    <option value="photo3.jpg">Social Responsibility</option>
                 </select>
             </div>
             <img id="photoDisplay" class="display-photo" src="" alt="Selected Photo">
